--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ p > em {
 	padding-left: 1rem;
 }
 
-main > p::first-letter {
+main > p:first-of-type::first-letter {
 	initial-letter: 2 2;
 	-webkit-initial-letter: 2 2;
 	margin-right: 0.8rem;
